# recap-video-generator

./: .gitignore  AGENTS.md  CHANGELOG-FIXES.md  README.md  pyproject.toml
.pi/agents/: issue-handler.md
.pi/skills/orchestrate/: SKILL.md  USAGE.md
docs/agents/: domain.md
src/recap/: __init__.py  assign.py  audio.py  batch.py  cli.py  pipeline.py  plan.py  render.py  transcode.py  trim.py  video.py
tests/: test_analyze.py  test_assign.py  test_audio.py  test_batch.py  test_cli.py  test_pipeline.py  test_plan.py  test_render.py  test_transcode.py  test_trim.py
