[project]
name = "recap"
version = "0.1.0"
description = "Auto-generate music-synced recap videos from phone footage"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "librosa>=0.10",
    "click>=8.1",
    "ffmpeg-python>=0.2",
]

[project.scripts]
recap = "recap.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
